Add Artists scaffolding.

--- a/RecordEFCore/Pages/Index.cshtml
+++ b/RecordEFCore/Pages/Index.cshtml
@@ -25,7 +25,7 @@
             @foreach (var ar in Model.ArtistRecords)
             {
                 <tr>
-                    <th scope="row">@ar.Artist</th>
+                    <td>@ar.Artist</td>
                     <td>@ar.Name</td>
                     <td>@ar.Recorded</td>
                     <td>@ar.Field</td>
