--- a/RecordEFCore/Pages/Artists/Details.cshtml
+++ b/RecordEFCore/Pages/Artists/Details.cshtml
@@ -27,7 +27,7 @@
             @Html.DisplayNameFor(model => model.Artist.Name)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Artist.Name)
+            <strong>@Html.DisplayFor(model => model.Artist.Name)</strong>
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Artist.Biography)
