--- a/RecordEFCore/Pages/Artists/Index.cshtml
+++ b/RecordEFCore/Pages/Artists/Index.cshtml
@@ -5,12 +5,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h3>Artist list</h3>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create" class="btn btn-primary btn-sm">Add new Artist</a>
 </p>
-<table class="table">
+
+<table class="table table-striped">
     <thead>
         <tr>
             <th>
@@ -23,20 +24,21 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Artist) {
-        <tr>
-            <td>
-                <strong>@Html.DisplayFor(modelItem => item.Name)</strong>
-            </td>
-            <td>
-                @Html.Raw(item.Biography)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.ArtistId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ArtistId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ArtistId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.Artist)
+        {
+            <tr>
+                <td>
+                    <strong>@Html.DisplayFor(modelItem => item.Name)</strong>
+                </td>
+                <td>
+                    @Html.Raw(item.Biography)
+                </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.ArtistId" class="btn btn-success btn-sm">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.ArtistId" class="btn btn-success btn-sm">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.ArtistId" class="btn btn-danger btn-sm">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
