--- a/RecordEFCore/Pages/Shared/_Layout.cshtml
+++ b/RecordEFCore/Pages/Shared/_Layout.cshtml
@@ -4,9 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - RecordEFCore</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <environment include="Development">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/RecordEFCore.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/@(nameof(RecordEFCore)).styles.css" />
+    </environment>
+    <environment include="Production">
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/RecordEFCore.min.styles.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/@(nameof(RecordEFCore)).styles.min.css" />
+    </environment>
 </head>
 <body>
     <header>
@@ -66,8 +75,12 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-
+    <environment include="Development">
+        <script src="~/js/site.js" asp-append-version="true"></script>
+    </environment>
+    <environment include="Production">
+        <script src="~/js/site.js" asp-append-version="true"></script>
+    </environment>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
