--- a/RecordEFCore/Pages/Shared/_Layout.cshtml
+++ b/RecordEFCore/Pages/Shared/_Layout.cshtml
@@ -41,6 +41,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-page="/Records/Index">Records</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-page="/Test">Test page</a>
+                            </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Maintenance</a>
                                 <div class="dropdown-menu">
